--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,3 @@
 {
-    "java.configuration.updateBuildConfiguration": "automatic",
-    "cSpell.words": [
-        "Serialversionuid"
-    ]
+    "java.configuration.updateBuildConfiguration": "automatic"
 }
